Feature: Add cpu mps support (#35)
* Ignore generated/local .wav files

* Loosen numpy reqs to installable version

* Attempt to support cpu/mps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     {name = "resemble-ai", email = "engineering@resemble.ai"}
 ]
 dependencies = [
-    "numpy==1.26.0",
+    "numpy~=1.26.0",
     "resampy==0.4.3",
     "librosa==0.10.0",
     "s3tokenizer",
