--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "chatterbox-tts"
-version = "0.1.1"
+version = "0.1.2"
 description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -20,6 +20,7 @@ dependencies = [
     "resemble-perth==1.0.1",
     "omegaconf==2.3.0",
     "conformer==0.3.2",
+    "safetensors==0.5.3"
 ]
 
 [project.urls]
